recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: not found: value carre
  carre()
  ^FourSquare:6: error: not found: value carre
  carre()
  ^