recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  carre()
  gauche(90)
  avance(100)
  droite(180)
  carre()
  
}

def care(){
  for (j<-0 to 4){
    	avance ( 100)
    	droite ( 90)
  	}
}
